# jbms-utility

./: CMakeLists.txt  README.md  config.cmake.in
src/jbms/: assign_endian.hpp  compare.hpp  cstr.hpp  default_init.hpp  expected.hpp  find_ptr.hpp  function_ref.hpp  generate_merge.hpp  hex_string.hpp  identity.hpp  is_resizable_container.hpp  logical.hpp  move_only.hpp  overload.hpp  print.hpp  ptr_ref.hpp  rotate.hpp  string_view.hpp
src/jbms/random/: xorshift128.hpp
src/jbms/test/: test_tools.hpp
